[package]
name = "pi_append_vec"
version = "0.3.4"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Only supports append vectors, lock free "
repository = "https://github.com/GaiaWorld/pi_slot.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "vec", "lock_free"]
readme = "README.md"
categories = ["data-structures", "lock free", "vectors"]


[dependencies]
pi_null = "0.1"
pi_arr = "0.17"
pi_share = "0.4"
