[package]
name = "pi_append_vec"
version = "0.5.4"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Only supports append vectors, lock free "
repository = "https://github.com/GaiaWorld/pi_slot.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "vec", "lock_free"]
readme = "README.md"
categories = ["data-structures", "concurrency"]


[dependencies]
pi_arr = "0.19"
pi_share = "0.4"
 